--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,26 @@
-body {
+*{
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
 }
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body{
+  background-color: #111315;
+}
+@import "./styles/header.css";
+@import "./styles/library.css";
+@import "./styles/today.css";
+.App{
+  margin-inline: 80px;
+}
+a{
+  color: #6f7378;
+  text-decoration: none;
+}
+@media screen and (max-width:1159px) {
+  .today{
+   display: block;
+  }
+  .btn{
+    margin-left: 0;
+  }
 }
